--- a/assets/scss/_banner.scss
+++ b/assets/scss/_banner.scss
@@ -466,7 +466,8 @@
     }
     // contact form Banner
 
-    &.contactBanner {
+    &.contactBanner,
+    &.projectBanner {
       .banner-image {
         bottom: -215px;
       }
@@ -544,7 +545,8 @@
 @media (max-width: 1199px) {
   .banner-area {
     // Contact form Banner
-    &.contactBanner {
+    &.contactBanner,
+    &.projectBanner {
       .banner-image {
         bottom: -185px !important;
       }
